[package]
name = "louis-sys"
version = "0.6.1"
authors = ["muvlon <muvlon@hentzes.de>"]
description = "Bindings to liblouis (low-level crate)"
repository = "https://github.com/whentze/liblouis-rust/tree/master/louis-sys"
categories = ["external-ffi-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
license = "GPL-3.0"
links = "louis"

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3.14"
autotools = "0.2.5"
log = "0.4.5"

[dev-dependencies]
semver-parser = "0.10.2"
lazy_static = "1.0.1"
